Change title, author list and abstract. --Lindley

--- a/ScintillatorPaper/ScintillatorPaper.tex
+++ b/ScintillatorPaper/ScintillatorPaper.tex
@@ -3,15 +3,20 @@
 \usepackage{graphicx,subfigure}
 \let\ifpdf\relax 
 
-\title{Optimizing Liquid Scintillators for Low Energy Events via Wavelength-Shifter and Quantum-Dot Doping} 
+%\title{Optimizing Liquid Scintillators for Low Energy Events via Wavelength-Shifter and Quantum-Dot Doping} 
+\title{Optimizing Solvent and Fluor for Quantum-Dot-Doped Liquid Scintillator}
 
-\author{R.~Schofield\setcounter{footnote}{0}\thanks{corresponding author}~$^a$,B.~Naranjo~$^a$,Y.~Ungar$^a$, C.~Coy$^a$, C.~Aberle$^a$, T.~De Guillebon$^a$, A.~Ierokomos$^a$, L.~Winslow$^a$\\
+
+%\author{R.~Schofield\setcounter{footnote}{0}\thanks{corresponding author}~$^a$,B.~Naranjo~$^a$,Y.~Ungar$^a$, C.~Coy$^a$, C.~Aberle$^a$, T.~De Guillebon$^a$, A.~Ierokomos$^a$, L.~Winslow$^a$\\
+\author{R.~Schofield\setcounter{footnote}{0}\thanks{corresponding author}~$^a$,Y.~Ungar$^a$, C.~Aberle$^a$, C.~Coy$^a$, T.~De Guillebon$^a$, A.~Ierokomos$^a$, B.~Naranjo~$^a$ L.~Winslow$^b$\\
 \llap{$^a$}University of California, Los Angeles, Los Angeles, CA 90095, USA\\
 %%\llap{$^b$}Ecole Normale Superieure de Cachan, 94235 Cachan cedex, France\\
 %%\llap{$^c$}University of California, Berkeley, Berkeley, CA 94704, USA\\
+\llap{$^b$}Massachusetts Institute of Technology, USA\\
 E-mail: \email{rschofield@physics.ucla.edu}}
 
-\abstract{Liquid scintillator-based detectors can be made more sensitive to low energy events by increasing the scintillator's light yield and enabling direction reconstruction of particles. This study presents the optimal concentration of wavelength-shifter 2,5-Diphenyloxazole (PPO) in various solvents.   The light yield of seven different scintillators (Toluene, Pseudocumene (PC), Linear Alkyl Benzene (LAB), Phenylcyclohexane (PCH), Phenyl-o-Xylyl Ethane (PXE) and two grades of Di-Isopropyl Napthalene (DIN)) are measured and modeled as a function of the concentration of PPO. In addition, the optical properties of 2~g/L PPO in toluene doped with quantum-dots (QDs) are measured. QDs' ability to fine-tune the absorption and emission spectra of liquid scintillators demonstrate their viability to conserve the directional Cherenkov signal produced by interactions in the liquid scintillator.}
+%\abstract{Liquid scintillator-based detectors can be made more sensitive to low energy events by increasing the scintillator's light yield and enabling direction reconstruction of particles. This study presents the optimal concentration of wavelength-shifter 2,5-Diphenyloxazole (PPO) in various solvents.   The light yield of seven different scintillators (Toluene, Pseudocumene (PC), Linear Alkyl Benzene (LAB), Phenylcyclohexane (PCH), Phenyl-o-Xylyl Ethane (PXE) and two grades of Di-Isopropyl Napthalene (DIN)) are measured and modeled as a function of the concentration of PPO. In addition, the optical properties of 2~g/L PPO in toluene doped with quantum-dots (QDs) are measured. QDs' ability to fine-tune the absorption and emission spectra of liquid scintillators demonstrate their viability to conserve the directional Cherenkov signal produced by interactions in the liquid scintillator.}
+\abstract{Quantum dots are semiconducting nanocrystals. Their unique optical properties that make them attractive secondary wavelength shifters for liquid scintillator and their composition makes them attractive dopants for loading metals into liquid scintillator. The light yield of seven different liquid scintillator solvents (Toluene, Pseudocumene (PC), Linear Alkyl Benzene (LAB), Phenylcyclohexane (PCH), Phenyl-o-Xylyl Ethane (PXE) and two grades of Di-Isopropyl Napthalene (DIN)) are measured and modeled as a function of the concentration of the fluor and primary wavelength shifter 2,5-Diphenyloxazole (PPO). These results are compared to the light yield of several candidate quantum-dots samples in a standard toluene-based liquid scintillator.}
 
 \begin{document}
 
