--- a/SphericalHarmonicsPaper/spherical_paper_v6.tex
+++ b/SphericalHarmonicsPaper/spherical_paper_v6.tex
@@ -37,7 +37,7 @@
 \vspace*{-3.5cm}
 \begin{flushright}
 Draft for NIMA\\
-version 6.1\\
+version 6.3\\
 \today
 \end{flushright}
 
@@ -81,7 +81,7 @@ We propose a technique for separating $\vbb$-decay events from background due to
 {\bf Introductory paragraphs saying that $\vbb$-decay is important and we'd like to improve sensitivity of liquid scintillator detectors.}
 
 
-In a large liquid scintillator detector two dominant backgrounds to $\vbb$-decay signal are $\vvbb$-decay and CCQE interactions of $\B$ solar neutrinos. As an example we show simulation of the energy spectrum for the $\vbb$-decay signal and various backgrounds in SNO+ experiment in Fig.~\ref{fig:SNOp_bkgs}.
+In a large liquid scintillator detector two dominant backgrounds to $\vbb$-decay signal are $\vvbb$-decay and electron scattering (ES) of $\B$ solar neutrinos. As an example we show simulation of the energy spectrum for the $\vbb$-decay signal and various backgrounds in SNO+ experiment in Fig.~\ref{fig:SNOp_bkgs}.
 
 
 \begin{figure}[htb]
@@ -91,7 +91,7 @@ In a large liquid scintillator detector two dominant backgrounds to $\vbb$-decay
 \label{fig:SNOp_bkgs}
 \end{figure}
 
-As shown in Fig.~\ref{fig:Kinematics}, in the region of interest (ROI) where total kinetic energy of the electrons is close to the energy spectrum end point (Q-value), there is almost no difference in kinematic distributions between $\vbb$- and $\vvbb$-decays. The event topology of these two processes are very similar - both produce two electron tracks in the detector. Therefore the energy resolution is the key parameter for discrimination between $\vbb$- and $\vvbb$-decays in any detector searching for $\vbb$-decay.
+The event topology of $\vbb$- and $\vvbb$-decays are very similar - both produce two electron tracks in the detector. As shown in Fig.~\ref{fig:Kinematics}, in the region of interest (ROI) where total kinetic energy of the electrons is close to the energy spectrum end point (Q-value), there is almost no difference in kinematic distributions between $\vbb$- and $\vvbb$-decays. Therefore the energy resolution is the key parameter for discrimination between these two processes in any detector searching for $\vbb$-decay.
 
 \begin{figure}[htb]
 \centering
@@ -143,15 +143,15 @@ line) are compared. The black vertical line illustrates a time cut at 33.5 ns. (
 \label{subsec:topology}
 %Signature of the $\vbb$-decay is two electrons with total kinetic energy equal to the isotope Q-value (e.g., 2.529~MeV for $\Te$). Therefore all $\vbb$-decay searches are designed to look for an excess of events in the energy spectrum around Q-value over the predicted number of background events. Backgrounds such as $\B$ solar neutrinos have distinct event topology that can be used to improve experimental sensitivity to the the $\vbb$-decay signal.
 
-Electrons in the energy range around Q-value of all isotopes considered for $\vbb$-decay searches are above Cherenkov threshold in liquid scintillators. Each electron above the threshold will produce a fuzzy Cherenkov ring in the detector. The fuzziness of the ring depends on electron scattering and in most cases the Cherenkov rings from low energy electrons degrade to randomly shaped clusters of Cherenkov photons around the direction of the electron track. 
+Electrons in the energy range around Q-value of all isotopes considered for $\vbb$-decay searches are above Cherenkov threshold in liquid scintillators. Each electron above the threshold will produce a fuzzy ring of Cherenkov light at the detector surface. The fuzziness of the ring depends on electron scattering. In most cases Cherenkov rings from low energy electrons degrade to randomly shaped clusters of Cherenkov photons around direction of the electron track. 
 
-Large fraction of $\vbb$-decay events will have two Cherenkov clusters~\footnote{Only one Cherenkov cluster is produced when either the angle between the two $\vbb$-decay electrons is too small or when the energy is split between the electrons in such a way that one electron falls below the Cherenkov threshold.} as opposed to one cluster from $\B$ events. Therefore the separation of $\vbb$-decay signal from $\B$ background depends on ability to identify topology of the Cherenkov light on the detector sphere on top of the uniformly distributed scintillation light. We show that analysis of spherical harmonics of the early photons allows to achieve noticeable separation between $\vbb$-decay and $\B$ events.
+Large fraction of $\vbb$-decay events will have two Cherenkov clusters~\footnote{Only one Cherenkov cluster is produced when either the angle between the two $\vbb$-decay electrons is too small or when the energy splits between the electrons in such a way that one electron falls below the Cherenkov threshold.} as opposed to one cluster from $\B$ events. Therefore separation of $\vbb$-decay signal from $\B$ background depends on ability to identify topology of the Cherenkov light on the detector sphere on top of uniformly distributed scintillation light. We show that analysis of spherical harmonics of the early photons allows to achieve noticeable separation between $\vbb$-decay and $\B$ events.
 
 
 
 %The simplest case for spherical harmonics analysis are events with the vertex located exactly in the center of the detector. For such event Cherenkov and scintillation light can be separated by applying a time cut on the photon arrival time as demonstrated in~\cite{Directionality}. To introduce the technique of spherical harmonics analysis we will follow the same strategy as in~\cite{Directionality} and use central events with a slightly different cut on the photon arrival time of 33.5~ns.
 
-In order to illustrate differences between different event topologies we introduce three event topologies: two electrons produced back-to-back at 180$^{\circ}$ angle, two electrons at 90$^{\circ}$ angle, and a single electron. The two former are representative topologies of the $\vbb$-decay signal events and the latter represents $\B$ background events. Figure~\ref{fig:Display_top_5MeV} shows Cherenkov photon distributions of 5~MeV electrons for each of the three topology. Overlay of 100 events with no QE applied is shown in order to make Cherenkov rings visible.
+In order to illustrate differences between different event topologies we introduce three event topologies: two electrons produced back-to-back at 180$^{\circ}$ angle, two electrons at 90$^{\circ}$ angle, and a single electron. The two former are representative topologies of $\vbb$-decay signal events and the latter represents $\B$ background events. Figure~\ref{fig:Display_top_5MeV} shows Cherenkov photon distributions of 5~MeV electrons for each of the three topology. Overlay of 100 events with no QE applied is shown in order to make Cherenkov rings visible.
 
 \begin{figure}[htb]
 \centering
@@ -173,7 +173,7 @@ Cherenkov clusters that form at lower energies are shown in Fig.~\ref{fig:Displa
 \label{fig:Display_top_2p5MeV}
 \end{figure}
 
-More realistic examples of $\Te$ $\vbb$-decay and $\B$ events simulated at the center of the detector are shown in Fig.~\ref{fig:Display_Te130}. Early PEs from Cherenkov and scintillation light are shown. Default simulation QE is applied. Time cut of 33.5~ns on the photon arrival time is used to select early PEs. Uniformly distributed scintillation light make it more difficult to guess the event topology. Nevertheless we show that there is still sufficient difference in the position distribution of the early PEs to separate two track and single track events.
+More realistic examples of $\Te$ $\vbb$-decay and $\B$ events simulated at the center of the detector are shown in Fig.~\ref{fig:Display_Te130}. Early PEs from Cherenkov and scintillation light are shown. Default simulation QE is applied. Time cut of 33.5~ns on the photon arrival time is used to select early PEs. Uniformly distributed scintillation light make it more difficult to guess the event topology. Nevertheless we show that there is still sufficient difference in the spatial distribution of the early PEs to separate two track and single track events.
 
 \begin{figure}[htb]
 \centering
@@ -187,9 +187,9 @@ More realistic examples of $\Te$ $\vbb$-decay and $\B$ events simulated at the c
 
 
 %$\vbb$-decay events become indistinguishable from single track topology when the angle between two electrons is small
-For quantitative description of the difference in the event topology we analyze spherical harmonics of the photon distributions on the detector sphere. We construct rotation invariant variables and compare them between signal and background events. As it is shown in the bottom part of Fig.~\ref{fig:Display_Te130} $\vbb$-decay become indistinguishable from single track topology when the angle between two electrons is small (two degenerate tracks). Event topologies of $\vbb$-decay and $\B$ events are also very similar when only one electron from $\vbb$-decay is above the Cherenkov threshold. Therefore the method of spherical harmonics is most effective for events with large angular separation between the two electrons when both electrons are above Cherenkov threshold. 
+For quantitative description of the difference in the event topology we analyze spherical harmonics of the photon distributions on the detector sphere. We construct rotation invariant variables and compare them between signal and background events. As it is shown in the bottom part of Fig.~\ref{fig:Display_Te130} $\vbb$-decay become indistinguishable from single track topology when the angle between two electrons is small (two degenerate tracks). Event topologies of $\vbb$-decay and $\B$ events are also very similar when only one electron from $\vbb$-decay is above the Cherenkov threshold. Therefore spherical harmonics analysis is most efficient for events with large angular separation between the two electrons and when both electrons are above Cherenkov threshold. 
 
-In this paper we focus on topological difference between two tracks and single track events and do not make any attempt to use absolute directional information to suppress single track events  which direction is consistent with the direction of solar neutrinos. Once a single track topology is established one can use a centroid method (see Ref.~\cite{Directionality}) to reconstruct directionality of the track or two degenerate tracks and suppress events that are aligned with the direction of $\B$ solar neutrinos.
+In this paper we focus on topological difference between two tracks and single track events and do not make any attempt to use absolute directional information to suppress single track events  where direction of the track is consistent with the direction of solar neutrinos. Once a single track topology is established one can use a centroid method (see Ref.~\cite{Directionality}) to reconstruct directionality of the track (or two degenerate tracks) and suppress events that are aligned with the direction of $\B$ solar neutrinos.
 
 \subsection{Description of Spherical Harmonics Analysis}
 A function $f(\theta,\phi)$ can be decomposed to a sum of spherical harmonics:
@@ -199,27 +199,49 @@ A function $f(\theta,\phi)$ can be decomposed to a sum of spherical harmonics:
 f(\theta,\phi) = \sum_{l=0}^{\infty} \sum_{m=-l}^{l} f_{lm} Y_{lm}(\theta,\phi),
 \end{eqnarray}
 
-where $Y_{lm}$ are Laplace's spherical harmonics defined in Eq.~\ref{eq2} in real-value basis using Legendre polynomials $P_l$. Coefficients $f_{lm}$ are defined in Eq.~\ref{eq3} 
+where $Y_{lm}$ are Laplace's spherical harmonics defined in real-value basis using Legendre polynomials $P_l$:
 
 \begin{eqnarray}
 \label{eq2}
-Y_{lm} = LONGformulaHERE
+Y_{lm} = LONGformulaHERE,
 \end{eqnarray}
 
+ where  coefficients $f_{lm}$ are defined as
+ 
 \begin{eqnarray}
 \label{eq3}
-f_{lm} = LONGformulaHERE
+f_{lm} = LONGformulaHERE.
 \end{eqnarray}
 
-Equation~\ref{eq4} defines multiple moments $S_l$ which are invariant under rotation. Combination of $S_l$'s for ($l$=0,1,2...) is determined by the event topology and can be used to distinguish between different topologies.
+Equation~\ref{eq4} defines power spectrum of $f(\theta,\phi)$ in spherical harmonics representation, $s_l$, where $l$ is a multiple moment. The power spectrum $s_l$ is invariant under rotation. It is unique to each of the functions $f_i(\theta,\phi)$, $i=$1,2,3..., that can not be transformed into each other by rotation.
 
 \begin{eqnarray}
 \label{eq4}
-S_l = \sum_{m=-l}^{m=l} |f_{lm}|^2
+s_l = \sum_{m=-l}^{m=l} |f_{lm}|^2
 \end{eqnarray}
 
-Figure~\ref{fig:Moments} compares $S_l$ distributions for two electrons emitted at 180 degree, two electrons at 90 degree, and a single electron. Total kinetic energy of the electrons is the same in all three cases.
+One can consider PEs distribution for each of $\vbb$-decay signal or background event as a function $f_i(\theta,\phi)$. Events with similar power spectrum would correspond to PE distributions on the detector sphere that can be closely aligned by a rotation. Such PE distributions belong to events with similar topology.
 
+Topology of $\vbb$-decay signal or background in a spherical detector determines the distribution of the PE's on the detector sphere and therefore a set of $s_l$'s can serve as a quantitative figure of merit for different event topologies. Rotation invariance of $s_l$'s ensures that this figure of merit does not depend on the orientation of the event with respect to the chosen coordinate frame.
+
+
+Sum of $s_l$'s over all multiple moments equals to L2 norm of the function $f(\theta,\phi)$:
+
+\begin{eqnarray}
+\label{eq5}
+\sum_{l=0}^{\infty} s_l = \int_{\Omega} |f(\theta,\phi)|^2 d\Omega.
+\end{eqnarray}
+
+Therefore normalized power spectrum 
+
+\begin{eqnarray}
+\label{eq5}
+S_l = \frac{s_l}{\sum_{l=0}^{\infty} s_l} =  \frac{s_l}{\int_{\Omega} |f(\theta,\phi)|^2 d\Omega}
+\end{eqnarray}
+
+can be used to compare shapes of various functions $f(\theta,\phi)$ with different normalization. The total number of PEs detected on the detector sphere fluctuates from event to event, therefore in all of the following we use normalized power $S_l$.
+
+Figure~\ref{fig:Moments} compares normalized power spectrum for the three representative event topologies that have been already shown in Fig.~\ref{fig:Display_top_5MeV}. We note that most of the information contains in the power spectrum with $l<$6. In most cases we found that there is no need to calculate $S_l$ for $l>$3 to achieve maximal separation between $\vbb$-decay and $\B$ events, because fluctuations in the PE distribution produce a lot of noise in the power spectrum for higher orders of multiple moments.
 
 \begin{figure}[htb]
 \centering
@@ -229,22 +251,26 @@ Figure~\ref{fig:Moments} compares $S_l$ distributions for two electrons emitted 
 \end{figure}
 
 
-In order to compare spherical harmonics for events with vertices located off-center anywhere inside the detector volume a coordinate transformation for each photon hit is needed. The transformation applied for each photon hit within an event is shown in Fig.~\ref{fig:SphH_transform}. Solid circle schematically shows actual detector boundaries. Dotted circle shows a new sphere of radius R$=$6.5~m with the event vertex position in the center. The radius vector of each photon hit is stretched or shorten until intersection with this new sphere using transformation $\vec{r}^{,}_{hit} = \frac{\vec{a}}{|\vec{a}|} \cdot R$. Where $\vec{r}^{,}_{hit}$ is a new radius vector of the photon hit, R is detector sphere radius, and $\vec{a}=\vec{r}_{hit} - \vec{r}_{vtx}$ with $\vec{r}_{hit}$ and $\vec{r}_{vtx}$ being radius vectors of the photon hit and vertex position in original coordinates.
+
+
+\subsection{Spherical Harmonics Analysis and Off-center Events}
+
+In order to compare spherical harmonics for events with vertices located off-center anywhere inside the detector volume a coordinate transformation for each photon hit is needed. The necessary transformation applied for each PE within an event is illustrated in Fig.~\ref{fig:SphH_transform}. Solid circle with radius R schematically shows actual detector boundaries. Dotted circle shows a new sphere with the same radius R, which now has the event vertex in its center. The radius vector of each PE is stretched or shorten to its intersection with this new sphere using transformation $\vec{r}^{,}_{PE} = \frac{\vec{a}}{|\vec{a}|} \cdot R$. Where $\vec{r}^{,}_{PE}$ is a new radius vector of a PE and $\vec{a}=\vec{r}_{PE} - \vec{r}_{vtx}$ with $\vec{r}_{PE}$ and $\vec{r}_{vtx}$ being radius vectors of the PE and the vertex in the original coordinates respectively.
 
 \begin{figure}[htb]
 \centering
 \includegraphics[angle=0,width=0.95\textwidth]{plots/SphH_transform_sketch.JPG}
-\caption{Coordinate transformation applied to events that are off-center. Solid circle schematically shows actual detector boundaries. Dotted circle shows a new sphere of radius R$=$6.5~m with the event vertex position in the center. The radius vector of each photon hit is stretched or shorten until intersection with this new sphere using transformation $\vec{r}^{,}_{hit} = \frac{\vec{a}}{|\vec{a}|} \cdot R$. Where $\vec{r}^{,}_{hit}$ is a new radius vector of the photon hit, R is detector sphere radius, and $\vec{a}=\vec{r}_{hit} - \vec{r}_{vtx}$ with $\vec{r}_{hit}$ and $\vec{r}_{vtx}$ being radius vectors of the photon hit and vertex position in original coordinates and correspondingly.}
+\caption{Coordinate transformation applied to events that are off-center. Solid circle with radius R schematically shows actual detector boundaries. Dotted circle shows a new sphere with the same radius R, which now has the event vertex in its center. The radius vector of each PE is stretched or shorten to its intersection with this new sphere using transformation $\vec{r}^{,}_{PE} = \frac{\vec{a}}{|\vec{a}|} \cdot R$. Where $\vec{r}^{,}_{PE}$ is a new radius vector of a PE and $\vec{a}=\vec{r}_{PE} - \vec{r}_{vtx}$ with $\vec{r}_{PE}$ and $\vec{r}_{vtx}$ being radius vectors of the PE and the vertex in the original coordinates respectively.}
 \label{fig:SphH_transform}
 \end{figure}
 
 
-\subsection{Software and implementation of the spherical harmonics analysis}
+\subsection{Implementation of the spherical harmonics analysis}
 {\bf A few words on the implementation. Calculation of $S_l$'s requires numerical integration that needs to be explained.}
 
-To illustrate spherical harmonics analysis technique we compare distributions of $S_0$, $S_1$, $S_2$, and $S_3$ for the three representative event topologies described in Sec.~\ref{subsec:topology}. Almost all the information about event topology is carried by Cherenkov light. Therefore we first show spherical harmonics of back-to-back,  90$^{\circ}$ and single track topologies calculated using Cherenkov light only (see Fig.~\ref{fig:SL_topologies_CHE}). No is QE applied here.
+To illustrate spherical harmonics analysis technique we compare distributions of $S_0$, $S_1$, $S_2$, and $S_3$ for the three representative event topologies described in Sec.~\ref{subsec:topology}. Almost all the information about event topology is carried by Cherenkov light. Therefore we first show spherical harmonics for back-to-back,  90$^{\circ}$ and single track topologies based on Cherenkov PEs only (see Fig.~\ref{fig:SL_topologies_CHE}).
 
-Two top panels of Fig.~\ref{fig:SL_topologies_CHE} show 2-dimensional distributions, S0 vs S1 and S2 vs S3, to demonstrate that all four $S_l$'s provide separation between event topologies.  We also introduce a 1-dimensional variable, S01 (bottom panel of Fig.~\ref{fig:SL_topologies_CHE}), that has the best separation power for majority of event topologies considered in this paper. $S_{01}$ is defined as a projection of S$_1$ vs S$_2$ distribution onto a linear fit of this 2-D distribution.
+Two top panels of Fig.~\ref{fig:SL_topologies_CHE} show 2-dimensional distributions, S0 vs S1 and S2 vs S3, to demonstrate that all four $S_l$'s provide separation between event topologies. No QE is applied in simulation of these events. We also introduce a 1-dimensional variable, S01 (bottom panel of Fig.~\ref{fig:SL_topologies_CHE}), that has the best separation power for majority of event topologies considered in this paper. $S_{01}$ is defined as a projection of S$_1$ vs S$_2$ distribution onto a linear fit of this 2-D distribution.
 
 \begin{figure}[htb]
 \centering
@@ -256,7 +282,7 @@ Two top panels of Fig.~\ref{fig:SL_topologies_CHE} show 2-dimensional distributi
 \end{figure}
 
 
-The effects from scintillation light and applying default QE is shown in Fig.~\ref{fig:SL_topologies_all}. Spherical harmonics of the same three representative event topologies are now calculated using early light (photons with arrival time less than 33.5~ns) that contains both directional Cherenkov light and uniform scintillation light. Default QE is also applied. Higher order multiple moments, S2 and S3, no longer provide noticeable separation between different event topologies.
+The effects due to presence of scintillation light and applying default QE are shown in Fig.~\ref{fig:SL_topologies_all}. Spherical harmonics of the same three representative event topologies are now calculated using early light (photons with arrival time less than 33.5~ns) that contains both directional Cherenkov light and uniform scintillation light. Default QE is also applied. Higher order multiple moments, S2 and S3, no longer provide noticeable separation between different event topologies.
 
 
 \begin{figure}[htb]
