--- a/ScintillatorPaper/ScintillatorPaper.tex
+++ b/ScintillatorPaper/ScintillatorPaper.tex
@@ -31,31 +31,25 @@ Liquid scintillators are composed of a organic solvent with secondary wavelength
 
 In previous work, we performed preliminary studies on the light yield of a quantum-dot-doped liquid scintillator\cite{qd1}. This work was followed up by a more detailed study of the chemistry and energy transfer in quantum-dot-doped scintillator including preliminary purification studies\cite{qd2}. This is part of a greater effort to develop a directional liquid scintillator detector. By narrowing the scintillation emission spectrum, the scintillation light is more efficiently separated from the directional Cherenkov improving the detectors ability to reconstruct a particle's direction\cite{direction}.
 
-In this work, 
+In this work, we measure the light yields of simple scintillator cocktails made from the six most common solvents to determine the best solvent for a quantum-dot-doped liquid scintillator. We use 2,5-Diphenyloxazole (PPO) as the primary wavelength shifter.  The details of these solvents and the PPO used are listed in Table~ \ref{solvents_table}. We study the light yield as a function of PPO concentration. These results are then compared to the light yields of a selection of currently available QDs, see Table~\ref{quantum_dots_table}, disolved in a scintillator cocktail of toluene with 2~g/L of PPO.
 
-
- The aim of this study is to theorize an ideal liquid scintillator for observing low energy events. This is achieved by maximizing the light yield by choosing the scintillator liquid and the 2,5-Diphenyloxazole (PPO) concentration while maintaining control over the emission and absorption spectrum of a scintillator with quantum-dots (QDs) to preserve the directional information inherent in Cherenkov radiation produced in scintillator interactions.
-
-Ionizing  particles  traversing  liquid  scintillators  mainly  excite  the  solvent  molecules  of  the  liq-
-uid.   Deexcitation  can  occur  essentially  via  the  emission  of  fluorescence  light  or  non-radiative
-energy  transfer  to  another  molecule.   Since  the  aromatic  solvent  molecules  are  not  transparent
-for their own flourescence light, in particular in large scale LS detectors, primary and sometimes
-secondary wavelength shifters are added to the liquid.  Most modern experiments use PPO (2,5-
-Diphenyloxazole) as primary and bis-MSB (4-bis-(2-Methylstyryl)benzene) as secondary wave-
-length shifter.
-
-Charged particles excite
-the molecules of the scintillator. Most frequently, the non-localized electrons in the
--bonds of the phenyl groups in the aromatic scintillator components are excited. Following
-excitation, the possible vibrational and rotational excitation of the molecule is
-quickly (O(10??12 s) [50]) transformed to heat by collisions with other molecules. The
-\subsection{Liquid Scintillators}
+%PUT THIS LATER.
+ %The concentration of the wavelength shifter PPO in each scintillator candidate listed in Table \ref{solvents_table} was adjusted and the relative light yields of these binary scintillator mixtures were compared. PPO concentration affects the light yield through two competing mechanisms. The efficiency of energy transfer from solvent to solute increases with increasing PPO concentration. At the studied PPO concentrations, the energy transfers are predominantly non-radiative F\"orster energy transfers \cite{foerster48,foerster59}, but the emission and re-absorption of real photons or collision energy transfer and others \cite{dexter53} also contribute to the overall effective energy transfer rate. There also is the effect of self-quenching \cite{birks64} which becomes more important at higher PPO concentrations. In this process, two PPO molecules interact with each other and no light is emitted. 
+%The light yield $I(c_{PPO})$ as a function of PPO concentration $c_{PPO}$ can be described by the equation 
+%\begin{equation}
+%\label{fit_eq}
+%I(c_{PPO})=p_1 \cdot \frac{1}{1+p_2/c_{PPO}} \cdot \frac{1}{1+p_3\cdot c_{PPO}}
+%\end{equation} 
+%where $p_1$, $p_2$ and $p_3$ are three solvent specific parameters: $p_1$ characterizes the maximum light yield without self-quenching, $p_2$ the effectiveness of energy transfer from solvent molecules to solute molecules, and $p3$ the effect of self-quenching. For details on the derivation of these types of equations see \cite{buck07,aberle11} and references therein. 
 
 %Add references for qdots 1 +2, christian's new paper.
-When charged particles propagate through a scintillator, electrons in the $\pi$-bonds of the aromatic rings are readily excited \cite{birks64}. The absorption and emission spectra of a single-molecule based scintillator overlap. In order to prevent degradation of efficiency due to the reabsorption of scintillation light by the scintillator, the liquid scintillator (a solute) was mixed with a wavelength shifter (a solvent). The wavelength shifter absorbs the energy from the excited electron and then releases light of a longer wavelength to which the scintillator is more transparent. Light yield, the number of photons produced per deposited energy, is a vital property of the scintillator because it relates directly to the energy resolution of a scintillator-based detector. Optimizing the energy transfer between solvent and solute molecules maximizes the light yield.
+%When charged particles propagate through a scintillator, electrons in the $\pi$-bonds of the aromatic rings are readily excited \cite{birks64}. The absorption and emission spectra of a single-molecule based scintillator overlap. In order to prevent degradation of efficiency due to the reabsorption of scintillation light by the scintillator, the liquid scintillator (a solute) was mixed with a wavelength shifter (a solvent). The wavelength shifter absorbs the energy from the excited electron and then releases light of a longer wavelength to which the scintillator is more transparent. Light yield, the number of photons produced per deposited energy, is a vital property of the scintillator because it relates directly to the energy resolution of a scintillator-based detector. Optimizing the energy transfer between solvent and solute molecules maximizes the light yield.
+
+%Unfortunately, doping liquid scintillators with QDs comes at the cost of lower light yields as shown in Section \ref{ly_results} and discussed Section \ref{abs_emi_results}. Fortunately, this can be partially countered by choosing the emission peak to match the optimal wavelength for the quantum efficiency of the photomultiplier tube (PMT)\cite{hamamatsupmt}. The QDs of various emission and absorption spectra that undergo study for suitability are listed in Table \ref{quantum_dots_table}.
+ 
 
 \begin{table}
-\caption{Solvents and solute names or abbreviations used in this paper, the corresponding IUPAC names, CAS numbers and information on the source of the chemicals. \label{solvents_table}}
+\caption{The solvents used in this paper, their names, abbreviations, corresponding IUPAC names, CAS numbers and information on the source of the chemicals. The primary wavelength shifter PPO is included for completeness. \label{solvents_table}}
  \begin{center}
     \begin{tabular}{llllll}
        Name & IUPAC Name & CAS Number & Source Information \\
@@ -80,7 +74,7 @@ When charged particles propagate through a scintillator, electrons in the $\pi$-
        \hline
        Phenylcyclohexane & Cyclohexylbenzene & 827-52-1 & Aldrich ($\geq$ 97~$\%$) \cite{sigmaaldrich} \\
        (PCH)             &                   &          &                          \\
-       \hline
+       \hline\hline
        Diphenyloxazole & 2,5-Diphenyloxazole & 92-71-7 & Aldrich (99~$\%$) \cite{sigmaaldrich} \\
        (PPO)               &     &         & suitable for scint. \\[5px] 
       \hline\hline
@@ -88,23 +82,6 @@ When charged particles propagate through a scintillator, electrons in the $\pi$-
   \end{center}
 \end{table}
 
-% One of the overarching themes of this paper is to identify solvents with generally high light yields and the light yield dependences on solute concentration. The candidates we studied are listed in table \ref{solvents_table}. PPO is used as a wavelength-shifter. 
- 
- The concentration of the wavelength shifter PPO in each scintillator candidate listed in Table \ref{solvents_table} was adjusted and the relative light yields of these binary scintillator mixtures were compared. PPO concentration affects the light yield through two competing mechanisms. The efficiency of energy transfer from solvent to solute increases with increasing PPO concentration. At the studied PPO concentrations, the energy transfers are predominantly non-radiative F\"orster energy transfers \cite{foerster48,foerster59}, but the emission and re-absorption of real photons or collision energy transfer and others \cite{dexter53} also contribute to the overall effective energy transfer rate. There also is the effect of self-quenching \cite{birks64} which becomes more important at higher PPO concentrations. In this process, two PPO molecules interact with each other and no light is emitted. 
-The light yield $I(c_{PPO})$ as a function of PPO concentration $c_{PPO}$ can be described by the equation 
-\begin{equation}
-\label{fit_eq}
-I(c_{PPO})=p_1 \cdot \frac{1}{1+p_2/c_{PPO}} \cdot \frac{1}{1+p_3\cdot c_{PPO}}
-\end{equation} 
-where $p_1$, $p_2$ and $p_3$ are three solvent specific parameters: $p_1$ characterizes the maximum light yield without self-quenching, $p_2$ the effectiveness of energy transfer from solvent molecules to solute molecules, and $p3$ the effect of self-quenching. For details on the derivation of these types of equations see \cite{buck07,aberle11} and references therein. 
-
-\subsection{Quantum-Dots}\label{qd_sec}
-Quantum-Dots are semiconducting nanocrystals. The size of a QD is inversely proportional to its band gap and therefore proportional to the wavelength of light it absorbs and emits. Doping scintillator with The wavelength of the absorbed and emitted light can be controlled by doping the scintillator with QDs. QDs can thus be used as a tool to obtain a directional signal from particles (and ultimately to reduce background signals) through the mechanism described below.
-
-Cherenkov radiation is emitted whenever a charged particle travels through a medium at a speed greater than the phase velocity of light in that medium. Unlike scintillation light that is emitted isotropically, Cherenkov light is radiated in a cone that contains the directional information of the incident particle. Cherenkov light is multi-chromatic and has a broad energy distribution. Doping the scintillator with QDs that absorb and emit only high energy photons enables the longer wavelengths of Cherenkov light to travel toward the detector unimpeded by the scintillation process. Because long wavelengths travel faster than short wavelengths of light in a medium due to chromatic dispersion and because the scintillation absorption and emission process takes time, the long wavelengths of Cherenkov light will reach the detector before the scintillation light, enabling measurement of Cherenkov light and ultimately directional reconstruction of particle trajectory.  Furthermore, adding QDs to the scintillator solvent generally narrows the absorption spectrum of the liquid scintillator. Narrowing the absorption spectrum of the scintillator is important because for low energy events, there are very few long-wavelength photons emitted. For example, a 1~MeV electron emits only 83 Cherenkov photons between 370-550 nm\cite{lindley14}. 
-
-Unfortunately, doping liquid scintillators with QDs comes at the cost of lower light yields as shown in Section \ref{ly_results} and discussed Section \ref{abs_emi_results}. Fortunately, this can be partially countered by choosing the emission peak to match the optimal wavelength for the quantum efficiency of the photomultiplier tube (PMT)\cite{hamamatsupmt}. The QDs of various emission and absorption spectra that undergo study for suitability are listed in Table \ref{quantum_dots_table}.
- 
 \begin{table}
 \caption{Quantum-Dot composition and source information. \label{quantum_dots_table}}
  \begin{center}
@@ -261,9 +238,6 @@ As clearly stated in Table \ref{Toluene_ChargeResults_fig}, toluene produces the
   \label{Toluene_ChargeResults_fig}}
         \end{center}
 \end{figure}
-
-
-
 
 \begin{figure}[tbh]
         \begin{center}
